Version: 1.3.14
Date: ????

  Changes:
    - Tweaks to IR3 preset (Added Heavy picket, graphene, and electrum. Replaced special projects pack end goal count with a technology milestone, since productivity in labs can actually make the required number of packs variable).
    - Tweaks to PyMods presets (Added Dig-o-saurus, Thikat, Caravan, and Oculus)
    - As usual you will need to refresh your milestone set yourself if you are already in the middle of a playthrough (Settings -> Switch to Empty -> Switch to the preset you want -> Confirm).

  Bugfixes:
    - Fix GUI sometimes being too wide for the screen when using Compact mode. (Again!)
    - Fix settings GUI "Add X" buttons states being wrong when changing preset.
    - Fix issue where technologies that end with a number (e.g. "Electronics 3") would be considered researched during backfilling even if they were not.

---------------------------------------------------------------------------------------------------
Version: 1.3.13
Date: 2022-12-26

  Changes:
    - Add presets for Industrial Revolution 3, with or without the "Special Projects" add-on.

---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 2022-11-15

  Bugfixes:
    - Fix GUI sometimes being too wide for the screen when using Compact mode. 
      Also, the GUI will now try to fit within 90% of the screen width instead of trying to use as much of the screen as possible.

  Locale:
    - Locale updates for 1.3.10 strings.

---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2022-11-09

  Bugfixes:
    - Fix settings page Add/Delete buttons that were still enabled after deleting selected milestones, which could cause a crash.

---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2022-11-06

  Changes: